--- a/source/photo.html
+++ b/source/photo.html
@@ -86,11 +86,13 @@
         </p>
         <article class="gallery__post gallery__post--background">
           <div class="gallery__box">
-            <picture>
-              <source srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x" media="(min-width: 1200px)">
-              <source srcset="img/panorama-tablet@1x.jpg 1x, img/panorama-tablet@2x.jpg 2x" media="(min-width: 660px)">
-              <img src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@2x.jpg 2x" alt="Фотография пользователя">
-            </picture>
+            <a href="">
+              <picture>
+                <source srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+                <source srcset="img/panorama-tablet@1x.jpg 1x, img/panorama-tablet@2x.jpg 2x" media="(min-width: 660px)">
+                <img src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@2x.jpg 2x" alt="Фотография пользователя">
+              </picture>
+            </a>
           </div>
           <div class="container">
             <div class="gallery__block gallery__block--position">
@@ -106,11 +108,13 @@
         </article>
         <div class="gallery__grid container">
           <article class="gallery__post">
-            <picture>
-              <source srcset="img/photo-car-desktop@1x.jpg 1x, img/photo-car-desktop@2x.jpg 2x" media="(min-width: 1200px)">
-              <source srcset="img/photo-car-tablet@1x.jpg 1x, img/photo-car-tablet@2x.jpg 2x" media="(min-width: 660px)">
-              <img src="img/photo-car-mobile@1x.jpg" srcset="img/photo-car-mobile@2x.jpg 2x" alt="Фотография пользователя">
-            </picture>
+            <a href="">
+              <picture>
+                <source srcset="img/photo-car-desktop@1x.jpg 1x, img/photo-car-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+                <source srcset="img/photo-car-tablet@1x.jpg 1x, img/photo-car-tablet@2x.jpg 2x" media="(min-width: 660px)">
+                <img src="img/photo-car-mobile@1x.jpg" srcset="img/photo-car-mobile@2x.jpg 2x" alt="Фотография пользователя">
+              </picture>
+            </a>
             <div class="gallery__block">
               <b class="gallery__user">Левон</b>
               <span class="gallery__timer">(5 часов назад)</span>
@@ -121,11 +125,13 @@
             </div>
           </article>
           <article class="gallery__post">
-            <picture>
-              <source srcset="img/photo-drumset-desktop@1x.jpg 1x, img/photo-drumset-desktop@2x.jpg 2x" media="(min-width: 1200px)">
-              <source srcset="img/photo-drumset-tablet@1x.jpg 1x, img/photo-drumset-tablet@2x.jpg 2x" media="(min-width: 660px)">
-              <img src="img/photo-drumset-mobile@1x.jpg" srcset="img/photo-drumset-mobile@2x.jpg 2x" alt="Фотография пользователя">
-            </picture>
+            <a href="">
+              <picture>
+                <source srcset="img/photo-drumset-desktop@1x.jpg 1x, img/photo-drumset-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+                <source srcset="img/photo-drumset-tablet@1x.jpg 1x, img/photo-drumset-tablet@2x.jpg 2x" media="(min-width: 660px)">
+                <img src="img/photo-drumset-mobile@1x.jpg" srcset="img/photo-drumset-mobile@2x.jpg 2x" alt="Фотография пользователя">
+              </picture>
+            </a>
             <div class="gallery__block">
               <b class="gallery__user">Антон</b>
               <span class="gallery__timer">(12 часов назад)</span>
@@ -136,11 +142,13 @@
             </div>
           </article>
           <article class="gallery__post">
-            <picture>
-              <source srcset="img/photo-window-desktop@1x.jpg 1x, img/photo-window-desktop@2x.jpg 2x" media="(min-width: 1200px)">
-              <source srcset="img/photo-window-tablet@1x.jpg 1x, img/photo-window-tablet@2x.jpg 2x" media="(min-width: 660px)">
-              <img src="img/photo-window-mobile@1x.jpg" srcset="img/photo-window-mobile@2x.jpg 2x" alt="Фотография пользователя">
-            </picture>
+            <a href="">
+              <picture>
+                <source srcset="img/photo-window-desktop@1x.jpg 1x, img/photo-window-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+                <source srcset="img/photo-window-tablet@1x.jpg 1x, img/photo-window-tablet@2x.jpg 2x" media="(min-width: 660px)">
+                <img src="img/photo-window-mobile@1x.jpg" srcset="img/photo-window-mobile@2x.jpg 2x" alt="Фотография пользователя">
+              </picture>
+            </a>
             <div class="gallery__block">
               <b class="gallery__user">Борис</b>
               <span class="gallery__timer">(20 часов назад)</span>
@@ -151,11 +159,13 @@
             </div>
           </article>
           <article class="gallery__post">
-            <picture>
-              <source srcset="img/photo-fair-desktop@1x.jpg 1x, img/photo-fair-desktop@2x.jpg 2x" media="(min-width: 1200px)">
-              <source srcset="img/photo-fair-tablet@1x.jpg 1x, img/photo-fair-tablet@2x.jpg 2x" media="(min-width: 660px)">
-              <img src="img/photo-fair-mobile@1x.jpg" srcset="img/photo-fair-mobile@2x.jpg 2x" alt="Фотография пользователя">
-            </picture>
+            <a href="">
+              <picture>
+                <source srcset="img/photo-fair-desktop@1x.jpg 1x, img/photo-fair-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+                <source srcset="img/photo-fair-tablet@1x.jpg 1x, img/photo-fair-tablet@2x.jpg 2x" media="(min-width: 660px)">
+                <img src="img/photo-fair-mobile@1x.jpg" srcset="img/photo-fair-mobile@2x.jpg 2x" alt="Фотография пользователя">
+              </picture>
+            </a>
             <div class="gallery__block">
               <b class="gallery__user">Сергей</b>
               <span class="gallery__timer">(25 часов назад)</span>
@@ -166,11 +176,13 @@
             </div>
           </article>
           <article class="gallery__post">
-            <picture>
-              <source srcset="img/photo-pov-desktop@1x.jpg 1x, img/photo-pov-desktop@2x.jpg 2x" media="(min-width: 1200px)">
-              <source srcset="img/photo-pov-tablet@1x.jpg 1x, img/photo-pov-tablet@2x.jpg 2x" media="(min-width: 660px)">
-              <img src="img/photo-pov-mobile@1x.jpg" srcset="img/photo-pov-mobile@2x.jpg 2x" alt="Фотография пользователя">
-            </picture>
+            <a href="">
+              <picture>
+                <source srcset="img/photo-pov-desktop@1x.jpg 1x, img/photo-pov-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+                <source srcset="img/photo-pov-tablet@1x.jpg 1x, img/photo-pov-tablet@2x.jpg 2x" media="(min-width: 660px)">
+                <img src="img/photo-pov-mobile@1x.jpg" srcset="img/photo-pov-mobile@2x.jpg 2x" alt="Фотография пользователя">
+              </picture>
+            </a>
             <div class="gallery__block">
               <b class="gallery__user">Максим</b>
               <span class="gallery__timer">(40 часов назад)</span>
@@ -181,11 +193,13 @@
             </div>
           </article>
           <article class="gallery__post">
-            <picture>
-              <source srcset="img/photo-wing-desktop@1x.jpg 1x, img/photo-wing-desktop@2x.jpg 2x" media="(min-width: 1200px)">
-              <source srcset="img/photo-wing-tablet@1x.jpg 1x, img/photo-wing-tablet@2x.jpg 2x" media="(min-width: 660px)">
-              <img src="img/photo-wing-mobile@1x.jpg" srcset="img/photo-wing-mobile@2x.jpg 2x" alt="Фотография пользователя">
-            </picture>
+            <a href="">
+              <picture>
+                <source srcset="img/photo-wing-desktop@1x.jpg 1x, img/photo-wing-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+                <source srcset="img/photo-wing-tablet@1x.jpg 1x, img/photo-wing-tablet@2x.jpg 2x" media="(min-width: 660px)">
+                <img src="img/photo-wing-mobile@1x.jpg" srcset="img/photo-wing-mobile@2x.jpg 2x" alt="Фотография пользователя">
+              </picture>
+            </a>
             <div class="gallery__block">
               <b class="gallery__user">Надежда</b>
               <span class="gallery__timer">(45 часов назад)</span>
@@ -203,11 +217,13 @@
       </section>
       <section class="send container">
         <form class="send__form" action="https://echo.htmlacademy.ru/courses" method="post">
-          <picture>
-            <source srcset="img/photo-road-desktop@1x.jpg 1x, img/photo-road-desktop@2x.jpg 2x" media="(min-width: 1200px)">
-            <source srcset="img/photo-road-tablet@1x.jpg 1x, img/photo-road-tablet@2x.jpg 2x" media="(min-width: 660px)">
-            <img class="send__image" src="img/photo-road-mobile@1x.jpg" srcset="img/photo-road-mobile@2x.jpg 2x" alt="Фотография пользователя">
-          </picture>
+          <a href="">
+            <picture>
+              <source srcset="img/photo-road-desktop@1x.jpg 1x, img/photo-road-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+              <source srcset="img/photo-road-tablet@1x.jpg 1x, img/photo-road-tablet@2x.jpg 2x" media="(min-width: 660px)">
+              <img class="send__image" src="img/photo-road-mobile@1x.jpg" srcset="img/photo-road-mobile@2x.jpg 2x" alt="Фотография пользователя">
+            </picture>
+          </a>
           <div class="send__block">
             <ul class="send__list">
               <li class="send__item send__item--crop send__item--active">
