--- a/source/photo.html
+++ b/source/photo.html
@@ -260,7 +260,7 @@
                   </svg>
                 </label>
                 <div class="send__bar">
-                  <div class="send__toggle"></div>
+                  <div class="send__toggle" tabindex="0"></div>
                 </div>
               </li>
               <li class="send__item send__item--fill">
@@ -273,7 +273,7 @@
                   </svg>
                 </label>
                 <div class="send__bar">
-                  <div class="send__toggle"></div>
+                  <div class="send__toggle" tabindex="0"></div>
                 </div>
               </li>
               <li class="send__item send__item--contrast">
@@ -285,7 +285,7 @@
                   </svg>
                 </label>
                 <div class="send__bar">
-                  <div class="send__toggle"></div>
+                  <div class="send__toggle" tabindex="0"></div>
                 </div>
               </li>
             </ul>
